# system-factories

./: README.md
connection-pooling-benchmark/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
connection-pooling-benchmark/app/: __init__.py  benchmark.py  db.py  metrics.py
connection-pooling-benchmark/docs/: benchmark-results.md  methodology.md
database-write-path-cpp/: .gitignore  CMakeLists.txt  README.md
database-write-path-cpp/include/db/: btree.hpp  lock_manager.hpp  metrics.hpp  row.hpp  table.hpp  transaction.hpp  wal.hpp
database-write-path-cpp/scripts/: run_hot_row_demo.sh
database-write-path-cpp/src/: btree.cpp  lock_manager.cpp  main.cpp  metrics.cpp  table.cpp  transaction.cpp  wal.cpp
database-write-path-cpp/tests/: test_write_path.cpp
dropbox-like-system/: README.md  pyproject.toml  requirements.txt
dynamodb-like-benchmark/: README.md  docker-compose.yml  requirements.txt
job-scheduler/: README.md  docker-compose.yml  requirements.txt
postgis-location-benchmark/: .gitignore  README.md  docker-compose.yml  requirements.txt
postgres-like-benchmark/: .gitignore  README.md  docker-compose.yml  requirements.txt
projectL_ads_click_aggregation/: .gitignore  README.md  requirements.txt
sqlite-concurrency-state-machine/: .gitignore  README.md  requirements.txt
url-shortener-benchmark/: .gitignore  README.md  docker-compose.yml  requirements.txt
virtual-waiting-queue/: .gitignore  README.md  pyproject.toml  requirements.txt
youtube-topk-videos/: .gitignore  README.md  docker-compose.yml  requirements.txt
(+111 files in other folders)
